configs/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: tronius-task
  labels:
    app: service-nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
    name: https
